Tests/CompilerTests/negative/illegal-enum-case.hylo
//! no-std

struct A {
  case one()
}

enum B {
  case one(x: Void) = ()
}
