Tests/CompilerTests/negative/illegal-enum-case.expected
negative/illegal-enum-case.hylo:4.3: error: declaration is not allowed here
  case one()
  ^
negative/illegal-enum-case.hylo:8.21-22: error: enum case with parameters cannot have an explicit definition
  case one(x: Void) = ()
                    ^
